//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table database_book {
  book_id String [pk]
  title String [not null]
  img_url String
  author String [not null]
  publisher String [not null]
  publishing_year Int [not null]
  subject String
  summary String
  price Float
  listed_books listed_book [not null]
}

Table listed_book {
  listing_id String [not null]
  book_id String [not null]
  provider_img_url String [not null]
  condition String [not null]
  listed_at DateTime [default: `now()`, not null]
  price Float [not null]
  book database_book [not null]
  is_sold Boolean [not null]
  sold_price Float [not null]
  is_leased Boolean [not null]
  leased_price Float [not null]
  leased_period Int [not null]
  is_bought_rel is_bought
  is_rented_rel is_rented
  provider_id String [not null]
  provider provider [not null]

  indexes {
    (book_id, listing_id) [pk]
  }
}

Table user {
  user_id String [pk]
  username String [not null]
  user_img_url String [not null]
  password_hashed String [not null]
  email String [unique, not null]
  faculty String [not null]
  phone_number String
  salt String [not null, default: '']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  provider provider
  is_bought_rel is_bought [not null]
  is_rented_rel is_rented [not null]
}

Table provider {
  provider_id String [pk]
  provider_name String [not null]
  average_rating Float
  preferred_location String
  description String
  policy String
  user user [not null]
  listed_book listed_book [not null]
}

Table is_bought {
  book_id String [not null]
  listing_id String [not null]
  user_id String [not null]
  location String
  pickup_date DateTime
  modifiable Boolean [not null]
  user user [not null]
  listed_book listed_book [not null]

  indexes {
    (book_id, listing_id) [pk]
  }
}

Table is_rented {
  book_id String [not null]
  listing_id String [not null]
  user_id String [not null]
  location String
  pickup_date DateTime
  modifiable Boolean [not null]
  end_date DateTime
  policy String
  user user [not null]
  listed_book listed_book [not null]

  indexes {
    (book_id, listing_id) [pk]
  }
}

Ref: listed_book.book_id > database_book.book_id

Ref: listed_book.provider_id > provider.provider_id

Ref: provider.provider_id - user.user_id

Ref: is_bought.user_id > user.user_id

Ref: is_bought.(book_id, listing_id) - listed_book.(book_id, listing_id)

Ref: is_rented.user_id > user.user_id

Ref: is_rented.(book_id, listing_id) - listed_book.(book_id, listing_id)